Fixed platform UI on mobile screens

--- a/public/styles/typography.less
+++ b/public/styles/typography.less
@@ -36,6 +36,10 @@ a, .link {
     border-bottom: none;
     opacity: .9;
   }
+
+  &.danger {
+    color: var(--config-color-danger);
+  }
 }
 
 b, strong {
